name:                fusion
version:             0.0.0.1
homepage:            https://github.com/danielbarter/fusion
author:              Daniel Barter
maintainer:          danielbarter@gmail.com
build-type:          Simple
cabal-version:       >=1.10


executable fusion
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , vector
                     , JuicyPixels
  c-sources:           c/tealeaf.c
  extra-libraries:     fftw3

